# nxpcomp

NXP_AIM_INDIA_2025/: README.md  setup.py
NXP_AIM_INDIA_2025/b3rb_ros_aim_india/: b3rb_ros_object_recog.py  b3rb_ros_warehouse.py  controller.py  extractor.py  map-detector.py  recog.py  shelf-detector.py  teleop_tk.py
NXP_AIM_INDIA_2025/resource/: coco.yaml
b3rb/: README.md
b3rb/b3rb_description/: CMakeLists.txt  package.xml
b3rb/b3rb_description/launch/: robot_description.launch.py
b3rb/b3rb_nav2/: CMakeLists.txt  package.xml
b3rb/b3rb_nav2/config/: localization.yaml  nav2.yaml  slam.yaml
b3rb/b3rb_nav2/launch/: localization.launch.py  nav2.launch.py  slam.launch.py
b3rb/b3rb_nav2/maps/: basic_map.yaml
b3rb_simulator/: README.md
b3rb_simulator/b3rb_gz_bringup/: CMakeLists.txt  package.xml
b3rb_simulator/b3rb_gz_bringup/launch/: hil.launch.py  sil.launch.py
b3rb_simulator/b3rb_gz_resource/: CMakeLists.txt  package.xml
b3rb_simulator/b3rb_gz_resource/models/b3rb/: model.config
b3rb_simulator/b3rb_simulator/: CMakeLists.txt  package.xml
