<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>b3rb_simulator</name>
  <version>0.0.0</version>
  <description>B3RB simulator meta package</description>
  <maintainer email="cogni@cognipilot.com">cogni</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>b3rb_gz_bringup</depend>
  <depend>b3rb_gz_resource</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
